--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="msg_yesno_def_title">请确认</string>
     <string name="msg_yesno_def_message">你确定吗?</string>
     <string name="acc_desc">打开开关，自动帮你打卡</string>
+    <string name="accessibility_service_description">该服务用于自动签到</string>
 </resources>
